--- a/src/assets/all.scss
+++ b/src/assets/all.scss
@@ -16,6 +16,18 @@ $utilities: map-merge(
 );
 @import "bootstrap/scss/utilities/api";
 
+@import 'material-icons/iconfont/material-icons.css';
 @import './helpers/utilities';
 @import 'bootstrap/dist/css/bootstrap.min.css';
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+
+@import './layout//base';
+@import './layout//footer';
+@import './layout/header';
+@import './layout/card';
+@import './layout/utils';
+
+@import './pages/index';
+@import './pages/aboutUs';
+@import './pages/mainCourse';
+@import './pages/personal';
