--- a/src/assets/helpers/_variables.scss
+++ b/src/assets/helpers/_variables.scss
@@ -67,7 +67,8 @@ $red:     #fa5f62 !default;
 // $red:     #dc3545 !default;
 $orange:  #facb5f !default;
 // $orange:  #fd7e14 !default;
-$yellow:  #ffc107 !default;
+$yellow:  #FACB5F !default;
+// $yellow:  #ffc107 !default;
 $green:   #17ab7a !default;
 // $green:   #198754 !default;
 $teal:    #20c997 !default;
