--- a/src/assets/pages/_mainCourse.scss
+++ b/src/assets/pages/_mainCourse.scss
@@ -1,30 +1,16 @@
 .topNavigation{
-margin-top: 64px;
-margin-bottom: 24px;
+  margin-bottom: 24px;
 }
 .bgdownImg{
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  height: 900px;
-  position: relative;
+  background-image: url('../images/background-2.png');
 }
 @media (max-width: 576px) {
   .bgdownImg{
-  max-width: 1072px;
-}
-}
-.content {
-  position: absolute; 
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0; 
-  z-index: 1; 
-  display: flex; 
-  flex-direction: column;
-  justify-content: flex-start; 
-  align-items: center; 
+    max-width: 1072px;
+  }
 }
 @media (max-width: 992px) {
   .sectionTop{
@@ -34,32 +20,11 @@ margin-bottom: 24px;
   }
 }
 }
-@media (max-width: 992px) {
-  .row-circle{
-    width:90%;
-    margin: 0 auto;
-  }
-}
-
-@media (max-width: 768px) {
-  .row-circle{
-    width:80%;  
-    margin: 0 auto;
-    .col-circle{
-      padding: 0;
-      margin: 12px;
-  }
-}
-}
 @media (max-width: 576px) {
-  .row-circle{
-    width:50%;  
-    margin: 0 auto;
-    .col-circle{
-      padding: 0;
-      margin: 12px;
+  .col-circle{
+    padding: 0;
+    margin: 12px;
   }
-}
 }
 @media (max-width: 992px) {
   .lesson{
@@ -86,9 +51,7 @@ margin-bottom: 24px;
   }
 }
 .bg-gray-200 {
-  width: 100%;
-  height: 100vh; 
-  margin-top: 80px;
+  width: 100%; 
 }
 @media (max-width: 576px) {
   .bg-gray-200{
