--- a/src/assets/layout/_utils.scss
+++ b/src/assets/layout/_utils.scss
@@ -12,6 +12,9 @@
     color: $gray-40;
 }
 //bg-color
+.bg-gray-20{
+    background-color: $gray-20;
+}
 .bg-gray-40{
     background-color: $gray-40;
 }
